syntax = "proto3";

option csharp_namespace = "IntegrationLibrary.Protos.EmergencyBloodRequests";

message EmergencyRequest {
  string message = 1;
  int64 randomInteger = 2;
}

message EmergencyResponse {
  string message = 1;
  int64 randomInteger = 2;
}
